# streamator

./: .gitignore  EC2_SETUP.md  deploy.ps1  setup_ec2.ps1  setup_ec2_env.ps1  setup_streamator_ec2.ps1  specs.md  ssh.ps1  start.ps1  start.sh
.amazonq/rules/memory-bank/: guidelines.md  job-emitter-plan.md  product.md  structure.md  tech.md
demo/: index.html  package-lock.json  package.json  vite.config.js
demo/src/: App.jsx
python/: README.md  main.py  pyproject.toml  requirements.txt
python/.ai-docs/: dynamorator.md  fastapi.md  pytest-asyncio.md  pytest.md
python/streamator/: __init__.py  emitter.py  fastapi.py  logger.py  store.py
python/tests/: test_backend.py
react/: README.md  package-lock.json  package.json  rollup.config.js
react/src/: LogPanel.jsx  formatEvent.js  index.js  log-compat.css  log.css  useLogStream.js
